Fix tooltip positioning with wrapping

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,3 +2,8 @@
 
 @import 'backgrounds';
 @import 'type';
+
+// This should be set by USWDS but isn't
+.usa-tooltip__body {
+  opacity: 0;
+}
